Fixing a few layout issues.

--- a/css/presentation.css
+++ b/css/presentation.css
@@ -66,7 +66,7 @@ header{
 
 pre.prettyprint{
 	position:relative;
-	width:900px;
+	width:868px;
 	padding:36px 16px 8px 16px;
 	font-size:22px;
 	line-height:32px;
